--- a/setwin.html
+++ b/setwin.html
@@ -108,6 +108,7 @@ input:focus {
     <p id="status"></p>
 
     <h3>Withdraw ETH (Only Owner)</h3>
+    <p>ETH Balance: <span id="contractBalance" style="color: green;">Loading...</span></p>
     <input type="number" id="withdrawAmount" placeholder="Amount ETH"><br>
     <button onclick="withdrawETH()">💰 Withdraw</button>
 
@@ -152,6 +153,25 @@ async function connectWallet() {
         alert("Metamask not found! Please install Metamask.");
     }
 }
+
+async function getContractBalance() {
+    if (!window.ethereum) {
+        alert("Metamask not found! Please install Metamask.");
+        return;
+    }
+
+    try {
+        const balanceWei = await web3.eth.getBalance(contract.options.address);
+        const balanceEth = web3.utils.fromWei(balanceWei, "ether");
+
+        document.getElementById("contractBalance").innerText = balanceEth + " ETH";
+    } catch (error) {
+        console.error("Error fetching contract balance:", error);
+        document.getElementById("contractBalance").innerText = "Error";
+    }
+}
+
+window.onload = getContractBalance;
 
 // Set Winner (Only The Owner)
 async function setWinner() {
