--- a/4d.html
+++ b/4d.html
@@ -49,8 +49,9 @@ h2 {
 .number {
     font-size: 5rem;
     font-weight: bold;
-    width: 80px;
+    width: 100%;
     height: 120px;
+    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,7 +97,7 @@ button:hover {
 }
 
 #angkaChart {
-    max-width: 600px; /* Sesuaikan dengan kebutuhan */
+    max-width: 1000px; /* Sesuaikan dengan kebutuhan */
     width: 100%;
     height: auto;
     display: block;
@@ -226,6 +227,8 @@ button:hover {
     <div class="buttons">
         <button onclick="generateRandomNumbers()">Generate</button>
         <button onclick="copyToClipboard()">Copy</button>
+        <button onclick="resetHistory()">Reset History</button>
+        <button onclick="downloadChart()">Download Chart</button>
     </div>
 
     <br><br>
@@ -254,111 +257,127 @@ Dapatkan angka acak untuk keperluan undian, perhitungan, atau sekadar bersenang-
        </div>
 
     <script>
-        let chartNumbers;
+    let chartNumbers;
 
-        function generateRandomNumbers() {
-            let chart = [0, 0, 0, 0];
-            let elements = [
-                document.getElementById("num1"),
-                document.getElementById("num2"),
-                document.getElementById("num3"),
-                document.getElementById("num4")
-            ];
-            let interval = [];
+    function generateRandomNumbers() {
+        let chart = [0, 0, 0, 0];
+        let elements = [
+            document.getElementById("num1"),
+            document.getElementById("num2"),
+            document.getElementById("num3"),
+            document.getElementById("num4")
+        ];
+        let interval = [];
 
-            // Animasi angka berputar
+        for (let i = 0; i < 4; i++) {
+            interval[i] = setInterval(() => {
+                chart[i] = Math.floor(Math.random() * 10);
+                elements[i].textContent = chart[i];
+            }, 50);
+        }
+
+        setTimeout(() => {
             for (let i = 0; i < 4; i++) {
-                interval[i] = setInterval(() => {
-                    chart[i] = Math.floor(Math.random() * 10);
-                    elements[i].textContent = chart[i];
-                }, 50);
+                clearInterval(interval[i]);
+
+                elements[i].classList.add("shake");
+                setTimeout(() => {
+                    elements[i].classList.remove("shake");
+                }, 500);
             }
 
-            setTimeout(() => {
-    for (let i = 0; i < 4; i++) {
-        clearInterval(interval[i]);
-
-        // Tambahkan animasi shake
-        elements[i].classList.add("shake");
-
-        // Hapus animasi shake setelah 500ms
-        setTimeout(() => {
-            elements[i].classList.remove("shake");
-        }, 500);
-    }
-    saveToHistory(chart.join(""));
-    updateChart();
-}, 2500);
-        }
-
-        function saveToHistory(newNumber) {
-            let history = JSON.parse(localStorage.getItem("history")) || [];
-            if (history.length >= 50) history.shift(); 
-            history.push(newNumber);
-            localStorage.setItem("history", JSON.stringify(history));
-        }
-
-        function updateChart() {
-            let history = JSON.parse(localStorage.getItem("history")) || [];
-            let frequency = new Array(10).fill(0);
-
-            history.forEach(entry => {
-                entry.split("").forEach(num => {
-                    frequency[parseInt(num)]++;
-                });
-            });
-
-            chartNumbers.data.datasets[0].data = frequency;
-            chartNumbers.update();
-
-            updateStats(frequency);
-        }
-
-        function updateStats(frequency) {
-            let maxFreq = Math.max(...frequency);
-            let minFreq = Math.min(...frequency.filter(f => f > 0));
-
-            let mostFrequent = frequency.map((f, i) => (f === maxFreq ? i : null)).filter(n => n !== null);
-            let leastFrequent = frequency.map((f, i) => (f === minFreq ? i : null)).filter(n => n !== null);
-            let totalGenerated = frequency.reduce((a, b) => a + b, 0);
-
-            document.getElementById("mostFrequent").textContent = mostFrequent.join(", ") || "-";
-            document.getElementById("leastFrequent").textContent = leastFrequent.join(", ") || "-";
-            document.getElementById("totalGenerated").textContent = totalGenerated;
-        }
-
-        function copyToClipboard() {
-            let chart = [
-                document.getElementById("num1").textContent,
-                document.getElementById("num2").textContent,
-                document.getElementById("num3").textContent,
-                document.getElementById("num4").textContent
-            ].join("");
-
-            navigator.clipboard.writeText(angka).then(() => {
-                alert("Angka berhasil disalin: " + chart);
-            });
-        }
-
-        window.onload = function () {
-            let ctx = document.getElementById('angkaChart').getContext('2d');
-            chartNumbers = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
-                    datasets: [{
-                        label: 'Frekuensi Angka Muncul',
-                        data: new Array(10).fill(0),
-                        backgroundColor: 'rgba(0, 183, 255, 0.5)',
-                        borderColor: 'rgba(0, 183, 255, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: { responsive: true, scales: { y: { beginAtZero: true } } }
-            });
-
+            saveToHistory(chart.join(""));
             updateChart();
-        };
+        }, 2500);
+    }
+
+    function saveToHistory(newNumber) {
+        let history = JSON.parse(localStorage.getItem("history")) || [];
+        if (history.length >= 50) history.shift();
+        history.push(newNumber);
+        localStorage.setItem("history", JSON.stringify(history));
+    }
+
+    function updateChart() {
+        let history = JSON.parse(localStorage.getItem("history")) || [];
+        let frequency = new Array(10).fill(0);
+
+        history.forEach(entry => {
+            entry.split("").forEach(num => {
+                frequency[parseInt(num)]++;
+            });
+        });
+
+        chartNumbers.data.datasets[0].data = frequency;
+        chartNumbers.update();
+
+        updateStats(frequency);
+    }
+
+    function updateStats(frequency) {
+        let maxFreq = Math.max(...frequency);
+        let minFreq = Math.min(...frequency.filter(f => f > 0));
+
+        let mostFrequent = frequency.map((f, i) => (f === maxFreq ? i : null)).filter(n => n !== null);
+        let leastFrequent = frequency.map((f, i) => (f === minFreq ? i : null)).filter(n => n !== null);
+        let totalGenerated = frequency.reduce((a, b) => a + b, 0);
+
+        document.getElementById("mostFrequent").textContent = mostFrequent.join(", ") || "-";
+        document.getElementById("leastFrequent").textContent = leastFrequent.join(", ") || "-";
+        document.getElementById("totalGenerated").textContent = totalGenerated;
+    }
+
+    function copyToClipboard() {
+        let chart = [
+            document.getElementById("num1").textContent,
+            document.getElementById("num2").textContent,
+            document.getElementById("num3").textContent,
+            document.getElementById("num4").textContent
+        ].join("");
+
+        navigator.clipboard.writeText(chart).then(() => {
+            alert("Angka berhasil disalin: " + chart);
+        });
+    }
+
+    function resetHistory() {
+    if (confirm("Yakin ingin menghapus semua riwayat angka?")) {
+        localStorage.removeItem("history");
+        updateChart(); // Refresh chart setelah direset
+    }
+}
+
+function downloadChart() {
+    let link = document.createElement('a');
+    link.href = document.getElementById("chartNumbers").toDataURL("image/png");
+    link.download = "chart-angka.png";
+    link.click();
+}
+
+    window.onload = function () {
+        let ctx = document.getElementById('chartNumbers').getContext('2d'); // Diperbaiki ID-nya
+        chartNumbers = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
+                datasets: [{
+                    label: 'Frekuensi Angka Muncul',
+                    data: new Array(10).fill(0),
+                    backgroundColor: 'rgba(0, 183, 255, 0.5)',
+                    borderColor: 'rgba(0, 183, 255, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    y: { beginAtZero: true }
+                }
+            }
+        });
+
+        updateChart();
+    };
     </script>
 
 </body>
