--- a/4d.html
+++ b/4d.html
@@ -49,9 +49,8 @@ h2 {
 .number {
     font-size: 5rem;
     font-weight: bold;
-    width: 100%;
+    width: 80px;
     height: 120px;
-    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -97,7 +96,7 @@ button:hover {
 }
 
 #angkaChart {
-    max-width: 1000px; /* Sesuaikan dengan kebutuhan */
+    max-width: 750px; /* Sesuaikan dengan kebutuhan */
     width: 100%;
     height: auto;
     display: block;
