--- a/4d.html
+++ b/4d.html
@@ -50,6 +50,7 @@ h2 {
     font-size: 5rem;
     font-weight: bold;
     width: 80px;
+    max-width: 750px;
     height: 120px;
     display: flex;
     align-items: center;
@@ -96,7 +97,7 @@ button:hover {
 }
 
 #angkaChart {
-    max-width: 750px; /* Sesuaikan dengan kebutuhan */
+    max-width: 500px; /* Sesuaikan dengan kebutuhan */
     width: 100%;
     height: auto;
     display: block;
