--- a/4d.html
+++ b/4d.html
@@ -93,7 +93,7 @@ button:hover {
     }
 }
 
-#angkaChart {
+#chartNumbers {
     max-width: 600px; /* Sesuaikan dengan kebutuhan */
     width: 100%;
     height: auto;
