--- a/4d.html
+++ b/4d.html
@@ -207,7 +207,40 @@ button:hover {
     justify-content: center;
     align-items: center;
     box-sizing: border-box; /* Pastikan padding dan border tidak mengubah ukuran elemen */
-} 
+}
+
+#predictionArea {
+      margin-top: 40px;
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+    }
+
+  #lastInput {
+  padding: 6px 10px;
+  font-size: 16px;
+  width: 100px;
+  background-color: rgba(255, 255, 255, 0.85);
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  outline: none;
+  transition: 
+    border-color 0.3s,
+    box-shadow 0.3s,
+    background-color 0.3s;
+}
+
+#lastInput:hover {
+  background-color: rgba(255, 255, 255, 0.95);
+  border-color: #007bff;
+  box-shadow: 0 0 6px rgba(0, 123, 255, 0.4);
+}
+
+#lastInput:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.6);
+  background-color: rgba(255, 255, 255, 1);
+}
     </style>
 </head>
 
@@ -243,7 +276,7 @@ button:hover {
     <div id="predictionArea">
     <h2>AI Prediction</h2>
     <p><b>Enter Official Result:</b><br>
-    <input type="number" id="lastInput" placeholder="e.g. 4D" />
+    <input type="text" id="lastInput" maxlength="4" oninput="this.value = this.value.replace(/\D/g, '')" />
     <button onclick="generatePrediction()">Analyze & Predict</button>
     <div id="predictionOutput" style="margin-top: 20px; font-size: 1.2rem;"></div>
   </div><br>
