--- a/4d.html
+++ b/4d.html
@@ -277,7 +277,7 @@ button:hover {
     <h2>AI Prediction</h2>
     <p><b>Enter Official Result:</b><br>
     <input type="text" id="lastInput" maxlength="4" oninput="this.value = this.value.replace(/\D/g, '')" />
-    <button onclick="generatePrediction()">Analyze & Predict</button>
+    <br><button onclick="generatePrediction()">Analyze & Predict</button>
     <div id="predictionOutput" style="margin-top: 20px; font-size: 1.2rem;"></div>
   </div><br>
 
