--- a/4d.html
+++ b/4d.html
@@ -275,7 +275,7 @@ button:hover {
 
     <div id="predictionArea">
     <h2>AI Prediction</h2>
-    <p><b>Enter Official Result:</b><br>
+    <p><b>Enter Official Result:</b><br><br>
     <input type="number" id="lastInput" maxlength="4" placeholder="e.g 4D" /></p>
     <button onclick="generatePrediction()">Analyze & Predict</button>
     <div id="predictionOutput" style="margin-top: 20px; font-size: 1.2rem;"></div>
