--- a/4d.html
+++ b/4d.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -23,26 +23,18 @@
     padding: 10px;
 }
 
-h1 {
-    font-size: 2.5rem;
-    text-shadow: 0 0 15px rgba(0, 183, 255, 0.8);
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-h2 {
-    font-size: 2rem;
-    text-shadow: 0 0 15px rgba(0, 183, 255, 0.8);
-    margin-bottom: 20px;
-    text-align: center;
+h1, h2 {
+    background: linear-gradient(90deg, #03a9f4, #f441a5);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #container {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      font-size: 3rem;
+      margin-bottom: 20px
 }
 
 .number {
