--- a/4d.html
+++ b/4d.html
@@ -238,7 +238,8 @@ button:hover {
 
 <body>
 
-    <h1>Random Numbers</h1>
+    <h1>AI Lotto Number Prediction</h1>
+  <h3>Lotto Chain Dezentralized Betting</h3>
 
     <div id="container">
         <div class="number" id="num1">0</div>
