--- a/4d.html
+++ b/4d.html
@@ -246,7 +246,7 @@ button:hover {
 
     <h1>AI Lotto Number Prediction</h1>
   <h3>Lotto Chain Dezentralized Betting</h3>
-
+  <br><br>
     <div id="container">
         <div class="number" id="num1">0</div>
         <div class="number" id="num2">0</div>
@@ -266,9 +266,15 @@ button:hover {
     <br>
 
     <div id="stats" style="text-align: left;">
-    <p>Most Frequently Appearing Numbers: <span id="mostFrequent"><b>-</b></span></p>
-    <p>Rarely Appearing Numbers: <span id="leastFrequent"><b>-</b></span></p>
-    <p>Total Number Generated: <span id="totalGenerated"><b>0</b></span></p>
+    <p>
+     <img src="img/4d1.svg" width="16" height="16" style="vertical-align: middle; margin-right: 5px;">
+        Most Frequently Appearing Numbers: <span id="mostFrequent"><b>-</b></span></p>
+    <p>
+     <img src="img/4d2.svg" width="16" height="16" style="vertical-align: middle; margin-right: 5px;">
+        Rarely Appearing Numbers: <span id="leastFrequent"><b>-</b></span></p>
+    <p>
+     <img src="img/4d3.svg" width="16" height="16" style="vertical-align: middle; margin-right: 5px;">
+        Total Number Generated: <span id="totalGenerated"><b>0</b></span></p>
     </div>
     <br>
 
